CSS fix on small screens

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -9,7 +9,7 @@
 
 .container {
   display: flex;
-  margin: auto;
+  margin: auto 0;
   flex-grow: 1;
 }
 
